src/front/layout.scss
@use "../../node_modules/@eonasdan/tempus-dominus/src/scss/tempus-dominus" as tempus;

@use "../../node_modules/bootstrap/scss/bootstrap" as *;

@use "../../node_modules/bootstrap-icons/font/bootstrap-icons" with ($bootstrap-icons-font-dir: "../../node_modules/bootstrap-icons/font/fonts"
);


.bg-discord {
    --bs-bg-opacity: 1;
    background-color: rgba(#5A64EC, var(--bs-bg-opacity)) !important;
}

.btn-discord {
    --bs-btn-color: #fff;
    --bs-btn-bg: #5A64EC;
    --bs-btn-border-color: #5A64EC;
    --bs-btn-hover-color: #fff;
    --bs-btn-hover-bg: #4249ae;
    --bs-btn-hover-border-color: #4249ae;
    --bs-btn-focus-shadow-rgb: 49, 132, 253;
    --bs-btn-active-color: #959494;
    --bs-btn-active-bg: #4249ae;
    --bs-btn-active-border-color: #4249ae;
    --bs-btn-active-shadow: inset 0 3px 5px #00000020;
    --bs-btn-disabled-color: #555;
    --bs-btn-disabled-bg: #FFF;
    --bs-btn-disabled-border-color: #555;
}

.bg-vdb {
    --bs-bg-opacity: 1;
    background-color: rgba(#5A5AFF, var(--bs-bg-opacity)) !important;
}

.btn-vdb {
    --bs-btn-color: #fff;
    --bs-btn-bg: #5A5AFF;
    --bs-btn-border-color: #5A5AFF;
    --bs-btn-hover-color: #fff;
    --bs-btn-hover-bg: #4249ae;
    --bs-btn-hover-border-color: #4249ae;
    --bs-btn-focus-shadow-rgb: 49, 132, 253;
    --bs-btn-active-color: #fff;
    --bs-btn-active-bg: #4249ae;
    --bs-btn-active-border-color: #4249ae;
    --bs-btn-active-shadow: inset 0 3px 5px #00000020;
    --bs-btn-disabled-color: #555;
    --bs-btn-disabled-bg: #FFF;
    --bs-btn-disabled-border-color: #555;
}

.btn-whatsapp {
    --bs-btn-color: #fff;
    --bs-btn-bg: #57ac61;
    --bs-btn-border-color: #65D072;
    --bs-btn-hover-color: #fff;
    --bs-btn-hover-bg: #5dbf69;
    --bs-btn-hover-border-color: #5dbf69;
    --bs-btn-focus-shadow-rgb: 49, 132, 253;
    --bs-btn-active-color: #fff;
    --bs-btn-active-bg: #5dbf69;
    --bs-btn-active-border-color: #5dbf69;
    --bs-btn-active-shadow: inset 0 3px 5px #00000020;
    --bs-btn-disabled-color: #555;
    --bs-btn-disabled-bg: #FFF;
    --bs-btn-disabled-border-color: #555;
}

tr[draggable] {
    cursor: grab;
}

tr.dragged>td,
tr.dragged>th {
    background-color: var(--bs-primary-bg-subtle);
}

@media (max-width: 768) {
    .smaller-font {
        font-size: 0.75em !important;
    }

    .sm-hide {
        visibility: hidden;
        display: none;
    }
}

// fix form floating labels z-index so they display on top of validation & focus
label.form-label {
    z-index: 6 !important;
}

// pointer for hoverable tables
.table-hover tbody>tr:hover {
    cursor: pointer;
}

